# STELLA_REMOTE_PC_DEPTH

stella_3d_navigation/: CMakeLists.txt  package.xml
stella_3d_navigation/costmap_common_params/: costmap_common_params.yaml  costmap_common_params_pure3d.yaml  teb_local_planner_params.yaml
stella_3d_navigation/launch/: stella_3d_navigation.launch  stella_3d_navigation_pc.launch
stella_3d_navigation/launch/include/: teb_local_planner_pure3d.launch
stella_3d_navigation/rviz/: stella_3d_navigation.rviz
stella_3d_navigation/src/: send_mark.py
stella_3d_slam/: CMakeLists.txt  package.xml
stella_3d_slam/launch/: stella_3d_slam.launch  stella_3d_slam_pc.launch
stella_3d_slam/map_database/: rtabmap.db
stella_3d_slam/rviz/: stella_3d_slam.rviz
stella_bringup/: create_udev_rules.sh  delete_udev_rules.sh  stella.rules
stella_bringup/camera_info/: rgb_Astra_Orbbec.yaml
stella_bringup/launch/: stella_robot.launch
stella_follower/: CMakeLists.txt  package.xml
stella_follower/launch/: face_follower.launch  laser_follower.launch  visual_follower.launch
stella_follower/launch/nodes/: faceTracker.launch  laserTracker.launch  laserfollow.launch  visualTracker.launch  visualfollow.launch
stella_follower/scripts/: face_follow.py  laserTracker.py  laser_follow.py  visualTracker.py  visual_follow.py
